--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -63094,9 +63094,6 @@
         }
       }
     },
-    "Play alert" : {
-
-    },
     "Playlist" : {
       "localizations" : {
         "de" : {
@@ -75842,9 +75839,6 @@
         }
       }
     },
-    "Sound" : {
-
-    },
     "Source %@ not found" : {
       "localizations" : {
         "de" : {
@@ -84430,6 +84424,9 @@
           }
         }
       }
+    },
+    "Test" : {
+
     },
     "Text" : {
       "localizations" : {
