IRL streaming protocol ideas.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -54568,6 +54568,9 @@
         }
       }
     },
+    "Malformed IRL URL" : {
+
+    },
     "Malformed IRLToolkit URL" : {
       "localizations" : {
         "de" : {
