--- a/Moblin Screen Recording/Localizable.xcstrings
+++ b/Moblin Screen Recording/Localizable.xcstrings
@@ -31,6 +31,9 @@
         }
       }
     },
+    "Malformed IRL URL" : {
+
+    },
     "Malformed IRLToolkit URL" : {
       "localizations" : {
         "de" : {
