Show redeemed rewards in chat.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -71353,6 +71353,9 @@
         }
       }
     },
+    "redeemed %@" : {
+
+    },
     "Refresh status" : {
       "localizations" : {
         "de" : {
@@ -73692,6 +73695,9 @@
           }
         }
       }
+    },
+    "Reward redemption" : {
+
     },
     "Right" : {
       "localizations" : {
