--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -14920,6 +14920,9 @@
         }
       }
     },
+    "Attributions" : {
+
+    },
     "Audio" : {
       "localizations" : {
         "de" : {
@@ -80780,6 +80783,9 @@
       }
     },
     "Sound" : {
+
+    },
+    "Sounds" : {
 
     },
     "Source %@ not found" : {
