--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -64484,7 +64484,7 @@
         }
       }
     },
-    "Number of times the GIF will be played for each alert." : {
+    "Number of times the GIF will be played each alert." : {
 
     },
     "OBS" : {
