Events/alerts connection status in top left of UI.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -26493,6 +26493,9 @@
         }
       }
     },
+    "Connected" : {
+
+    },
     "Connecting" : {
       "localizations" : {
         "de" : {
@@ -37154,6 +37157,9 @@
           }
         }
       }
+    },
+    "Events (alerts)" : {
+
     },
     "Example URL: https://play.afreecatv.com/myChannelName/myVideoId" : {
       "localizations" : {
