Twitch rewards in alert widget.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -63190,6 +63190,9 @@
         }
       }
     },
+    "No rewards found" : {
+
+    },
     "No RTMP server streams exists" : {
       "localizations" : {
         "de" : {
@@ -73771,6 +73774,9 @@
           }
         }
       }
+    },
+    "Rewards" : {
+
     },
     "Right" : {
       "localizations" : {
@@ -96533,6 +96539,9 @@
           }
         }
       }
+    },
+    "Twitch rewards" : {
+
     },
     "Two columns" : {
       "localizations" : {
