Alert positioning continued.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -39349,6 +39349,9 @@
         }
       }
     },
+    "Face alerts" : {
+
+    },
     "Facebook" : {
       "localizations" : {
         "de" : {
