Trigger alerts with chat message.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -10096,6 +10096,9 @@
         }
       }
     },
+    "a command" : {
+
+    },
     "A connection with high priority will be used more than a connection with low priority if the high priority connection is stable. Unstable connections will get lowest priority regardless of configured priority until they are stable again." : {
       "localizations" : {
         "de" : {
@@ -96953,6 +96956,9 @@
           }
         }
       }
+    },
+    "Trigger alerts with chat bot commands." : {
+
     },
     "Trigger alerts. Configure alert names in alert widgets." : {
 
